# python_template

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.rst  README.rst  pyproject.toml
.github/workflows/: codeql-analysis.yml
configs/: black.toml  dynaconf.toml  env  flakeheaven.toml  isort.toml  mypy.toml  packages.toml  pylint.toml  pytest.toml  tox.toml
configs/_includes/: bandit.toml  black.toml  check-manifest.toml  commitizen.toml  docutils.conf  flake8.toml  flakeheaven.toml  interrogate.toml  isort.toml  liccheck.toml  mypy.toml  pylint.toml  pytest.toml  sphinx_conf.py  sphinx_conf.py.maybe  unimport.toml
configs/dynaconf/: dynaconf.toml
data/: redbubble.csv  society6.csv  threadless.csv
docs/: async.reqs  env  flake8.toml  flask.reqs  interrogate.toml  monitoring.reqs  packages.toml
