[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python_template"
version = "0.1.0"
description = "A template for creating new python projects"
authors = ["cosmo-zvh <github@zvh.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
devtools = {extras = ["pygments"], version = "^0.8.0"}
deal = {extras = ["all"], version = "^4.21.1"}
interrogate = {extras = ["png"], version = "^1.5.0"}
Jinja2 = "^3.1.1"
toml = "^0.10.2"
attrs = "^21.4.0"
Cython = "^0.29.28"
python-dotenv = "^0.20.0"
docker-compose = "^1.29.2"
pre-commit = "^2.17.0"
tox = "^3.24.5"
black = "^22.3.0"
docformatter = "^1.4"
isort = "^5.10.1"
pyannotate = "^1.2.0"
bandit = "^1.7.4"
safety = "^1.10.3"
check-manifest = "^0.48"
darglint = "^1.8.1"
flake8 = "^4.0.1"
flakehell = "^0.9.0"
mypy = "^0.942"
pydantic = "^1.9.0"
pydocstyle = "^6.1.1"
pylint = "^2.13.3"
pylint-flask = "^0.6"
dlint = "^0.12.0"
flake8-bugbear = "^22.3.23"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.8.0"
flake8-eradicate = "^1.2.0"
pandas-vet = "^0.2.3"
better-exceptions = "^0.3.3"
multistructlog = "^2.1.0"
pretty-errors = "^1.2.25"
Pygments = "^2.11.2"
rich = "^12.0.1"
structlog = "^21.5.0"
structlog-pretty = "^0.3.0"
atheris = "^2.0.10"
datamodel-code-generator = "^0.11.20"
Faker = "^13.3.4"
hypothesis = "^6.40.0"
hypothesis-csv = "^0.3.4"
hypothesis-fspaths = "^0.1"
pytest = "^7.1.1"
splinter = "^0.17.0"
pytest-asyncio = "^0.18.3"
pytest-bdd = "^5.0.0"
pytest-benchmark = "^3.4.1"
pytest-datadir = "^1.3.1"
pytest-docker = "^0.11.0"
pytest-flake8 = "^1.1.1"
pytest-html = "^3.1.1"
pytest-lazy-fixture = "^0.6.3"
pytest-mock = "^3.7.0"
pytest-mypy = "^0.9.1"
pytest-randomly = "^3.11.0"
pytest-splinter = "^3.3.1"
pytest-structlog = "^0.5"
pytest-testinfra = "^6.6.0"
pytest-testmon = "^1.3.1"
pytest-tornado = "^0.8.1"
breathe = "^4.33.1"
Sphinx = "^4.5.0"
numpydoc = "^1.2"
releases = "^1.6.3"
sphinx-autodoc-typehints = "^1.17.0"
sphinx-bootstrap-theme = "^0.8.1"
sphinx-rtd-theme = "^1.0.0"
hunter = "^3.4.3"
snoop = "^0.4.1"

